Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjObject.quorum
class Main
    action Main
        Number v = Test()
    end

    action Test() returns Number
        Object var
        return var
    end
end